# native-app-samples

./: PolarisPolicy.txt  README.md  SAMPLE-LIST-INFO-README.md  STEP-README.md  owner.kv
BlankNativeActivity/: README.md  owner.kv
BlankNativeActivity(NEW)/: README.md
BlankNativeActivity(NEW)/app/: CMakeLists.txt
BlankNativeActivity(NEW)/app/src/main/cpp/: native-lib.cpp
BlankNativeActivity(_Using_classes)/app/: CMakeLists.txt
BlankNativeActivity(_Using_classes)/app/src/main/: AndroidManifest.xml
BlankNativeActivity(_Using_classes)/app/src/main/cpp/: event_loop.cpp  event_loop.h  log.h  (+5 more)
BlankNativeActivity/app/: CMakeLists.txt
BlankNativeActivity/app/src/main/: AndroidManifest.xml
ColoredNativeActivity/: README.md
ColoredNativeActivity(NEW)/: README.md  local.properties
ColoredNativeActivity(NEW)/app/: CMakeLists.txt  proguard-rules.pro
ColoredNativeActivity(NEW)/app/src/main/: AndroidManifest.xml
ColoredNativeActivity(__Using_Classes)/: gradle.properties
ColoredNativeActivity(__Using_Classes)/app/: CMakeLists.txt
ColoredNativeActivity(__Using_Classes)/app/src/main/: AndroidManifest.xml
ColoredNativeActivity(__Using_Classes)/app/src/main/cpp/: event_loop.cpp  event_loop.h  handle_command.cpp  handle_command.h  input_event.cpp  input_event.h  log.h  native_egl.cpp  native_egl.h
ColoredNativeActivity/app/: CMakeLists.txt  proguard-rules.pro
MultipleLineDrawing/: README.md  owner.kv
MultipleLineDrawing/app/: CMakeLists.txt  build.gradle
MultipleLineDrawing/app/src/main/: AndroidManifest.xml
SingleLineDrawing/: README.md  owner.kv
SingleLineDrawing/app/: CMakeLists.txt  build.gradle
SingleLineDrawing/app/src/main/: AndroidManifest.xml
SingleLineDrawing/app/src/main/cpp/: linedraw.cpp  linedraw.h  native-lib.cpp
(+8 files in other folders)
